--- a/3.3
+++ b/3.3
@@ -1,5 +1,5 @@
 s = ''
-while s != 'выход':
+while True:
     s = input('Введите слово: ')
     if 'ф' in s:
         print('Ого! Это редкое слово!')
